Fix bio layout on small screens.

--- a/assets/less/page.less
+++ b/assets/less/page.less
@@ -179,7 +179,7 @@ body {
     margin-top: 15px;
   }
   .bio-content {
-    max-width: 65%;
+    max-width: 60%;
     float: left;
     margin-left: 10px;
     margin-right: 10px;
